// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full article with style 1`] = `
<ArticleSkeleton>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(60, 129, 190, 1)",
        "paddingBottom": 45,
        "paddingHorizontal": 20,
        "paddingTop": 45,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleLabel />
      </View>
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 30,
            "lineHeight": 36,
            "marginBottom": 10,
            "textAlign": "center",
          }
        }
      >
        Some Headline
      </Text>
      <View
        style={
          Object {
            "marginBottom": 15,
            "marginTop": 5,
          }
        }
      >
        <ArticleFlags />
      </View>
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 20,
            "lineHeight": 25,
            "marginBottom": 0,
            "paddingHorizontal": 10,
            "textAlign": "center",
          }
        }
      >
        Some Standfirst
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    <ModalImage />
    <CenteredCaption />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderTopColor": "#DBDBDB",
        "borderTopWidth": 1,
        "marginBottom": 20,
        "marginHorizontal": 10,
        "marginTop": 20,
        "paddingBottom": 10,
        "paddingTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          }
        }
      >
        <ArticleBylineWithLinks />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
              "marginTop": 0,
            }
          }
        >
          Friday March 13 2015, 6.54pm, The Times
        </Text>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;

exports[`full article with style in the culture magazine 1`] = `
<ArticleSkeleton>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(60, 129, 190, 1)",
        "paddingBottom": 45,
        "paddingHorizontal": 20,
        "paddingTop": 45,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleLabel />
      </View>
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "Flama-Bold",
            "fontSize": 30,
            "lineHeight": 35,
            "marginBottom": 10,
            "textAlign": "center",
          }
        }
      >
        Some Headline
      </Text>
      <View
        style={
          Object {
            "marginBottom": 15,
            "marginTop": 5,
          }
        }
      >
        <ArticleFlags />
      </View>
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 20,
            "lineHeight": 25,
            "marginBottom": 0,
            "paddingHorizontal": 10,
            "textAlign": "center",
          }
        }
      >
        Some Standfirst
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    <ModalImage />
    <CenteredCaption />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderTopColor": "#DBDBDB",
        "borderTopWidth": 1,
        "marginBottom": 20,
        "marginHorizontal": 10,
        "marginTop": 20,
        "paddingBottom": 10,
        "paddingTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          }
        }
      >
        <ArticleBylineWithLinks />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
              "marginTop": 0,
            }
          }
        >
          Friday March 13 2015, 6.54pm, The Times
        </Text>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;

exports[`full article with style in the style magazine 1`] = `
<ArticleSkeleton>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(60, 129, 190, 1)",
        "paddingBottom": 45,
        "paddingHorizontal": 20,
        "paddingTop": 45,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleLabel />
      </View>
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "CenturyGothic-Bold",
            "fontSize": 30,
            "lineHeight": 35,
            "marginBottom": 10,
            "textAlign": "center",
            "textTransform": "uppercase",
          }
        }
      >
        Some Headline
      </Text>
      <View
        style={
          Object {
            "marginBottom": 15,
            "marginTop": 5,
          }
        }
      >
        <ArticleFlags />
      </View>
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 20,
            "lineHeight": 25,
            "marginBottom": 0,
            "paddingHorizontal": 10,
            "textAlign": "center",
          }
        }
      >
        Some Standfirst
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    <ModalImage />
    <CenteredCaption />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderTopColor": "#DBDBDB",
        "borderTopWidth": 1,
        "marginBottom": 20,
        "marginHorizontal": 10,
        "marginTop": 20,
        "paddingBottom": 10,
        "paddingTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          }
        }
      >
        <ArticleBylineWithLinks />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
              "marginTop": 0,
            }
          }
        >
          Friday March 13 2015, 6.54pm, The Times
        </Text>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;

exports[`full article with style in the sunday times magazine 1`] = `
<ArticleSkeleton>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(60, 129, 190, 1)",
        "paddingBottom": 45,
        "paddingHorizontal": 20,
        "paddingTop": 45,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleLabel />
      </View>
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "Tiempos-Headline-Bold",
            "fontSize": 30,
            "lineHeight": 35,
            "marginBottom": 10,
            "textAlign": "center",
          }
        }
      >
        Some Headline
      </Text>
      <View
        style={
          Object {
            "marginBottom": 15,
            "marginTop": 5,
          }
        }
      >
        <ArticleFlags />
      </View>
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 20,
            "lineHeight": 25,
            "marginBottom": 0,
            "paddingHorizontal": 10,
            "textAlign": "center",
          }
        }
      >
        Some Standfirst
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    <ModalImage />
    <CenteredCaption />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderTopColor": "#DBDBDB",
        "borderTopWidth": 1,
        "marginBottom": 20,
        "marginHorizontal": 10,
        "marginTop": 20,
        "paddingBottom": 10,
        "paddingTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          }
        }
      >
        <ArticleBylineWithLinks />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
              "marginTop": 0,
            }
          }
        >
          Friday March 13 2015, 6.54pm, The Times
        </Text>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;

exports[`tablet full article with style in the culture magazine 1`] = `
<ArticleSkeleton>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(60, 129, 190, 1)",
        "paddingBottom": 45,
        "paddingHorizontal": 20,
        "paddingTop": 45,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleLabel />
      </View>
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "Flama-Bold",
            "fontSize": 30,
            "lineHeight": 35,
            "marginBottom": 10,
            "textAlign": "center",
          }
        }
      >
        Some Headline
      </Text>
      <View
        style={
          Object {
            "marginBottom": 15,
            "marginTop": 5,
          }
        }
      >
        <ArticleFlags />
      </View>
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 20,
            "lineHeight": 25,
            "marginBottom": 0,
            "paddingHorizontal": 10,
            "textAlign": "center",
          }
        }
      >
        Some Standfirst
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    <ModalImage />
    <CenteredCaption />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderTopColor": "#DBDBDB",
        "borderTopWidth": 1,
        "marginBottom": 20,
        "marginHorizontal": 10,
        "marginTop": 20,
        "paddingBottom": 10,
        "paddingTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          }
        }
      >
        <ArticleBylineWithLinks />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
              "marginTop": 0,
            }
          }
        >
          Friday March 13 2015, 6.54pm, The Times
        </Text>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;

exports[`tablet full article with style in the style magazine 1`] = `
<ArticleSkeleton>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(60, 129, 190, 1)",
        "paddingBottom": 45,
        "paddingHorizontal": 20,
        "paddingTop": 45,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleLabel />
      </View>
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "CenturyGothic-Bold",
            "fontSize": 30,
            "lineHeight": 35,
            "marginBottom": 10,
            "textAlign": "center",
            "textTransform": "uppercase",
          }
        }
      >
        Some Headline
      </Text>
      <View
        style={
          Object {
            "marginBottom": 15,
            "marginTop": 5,
          }
        }
      >
        <ArticleFlags />
      </View>
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 20,
            "lineHeight": 25,
            "marginBottom": 0,
            "paddingHorizontal": 10,
            "textAlign": "center",
          }
        }
      >
        Some Standfirst
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    <ModalImage />
    <CenteredCaption />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderTopColor": "#DBDBDB",
        "borderTopWidth": 1,
        "marginBottom": 20,
        "marginHorizontal": 10,
        "marginTop": 20,
        "paddingBottom": 10,
        "paddingTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          }
        }
      >
        <ArticleBylineWithLinks />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
              "marginTop": 0,
            }
          }
        >
          Friday March 13 2015, 6.54pm, The Times
        </Text>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;

exports[`tablet full article with style in the sunday times magazine 1`] = `
<ArticleSkeleton>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(60, 129, 190, 1)",
        "paddingBottom": 45,
        "paddingHorizontal": 20,
        "paddingTop": 45,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 10,
          }
        }
      >
        <ArticleLabel />
      </View>
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "Tiempos-Headline-Bold",
            "fontSize": 30,
            "lineHeight": 35,
            "marginBottom": 10,
            "textAlign": "center",
          }
        }
      >
        Some Headline
      </Text>
      <View
        style={
          Object {
            "marginBottom": 15,
            "marginTop": 5,
          }
        }
      >
        <ArticleFlags />
      </View>
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 20,
            "lineHeight": 25,
            "marginBottom": 0,
            "paddingHorizontal": 10,
            "textAlign": "center",
          }
        }
      >
        Some Standfirst
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    <ModalImage />
    <CenteredCaption />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderTopColor": "#DBDBDB",
        "borderTopWidth": 1,
        "marginBottom": 20,
        "marginHorizontal": 10,
        "marginTop": 20,
        "paddingBottom": 10,
        "paddingTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          }
        }
      >
        <ArticleBylineWithLinks />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
              "marginTop": 0,
            }
          }
        >
          Friday March 13 2015, 6.54pm, The Times
        </Text>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;
